<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/native_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_native_dialog"
        app:layout_constraintBottom_toTopOf="@+id/custom_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/custom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_custom_dialog"
        app:layout_constraintBottom_toTopOf="@+id/fragment_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/native_btn" />

    <Button
        android:id="@+id/fragment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_fragment_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>